# automation_stage_generator

./: .gitignore  LICENSE  README.md  path.sh  pixi.toml  pyproject.toml
.autoespnet3/: config.json
.autoespnet3/cache/: session.json
.autoespnet3/src/stages/: analyze_dir_stage.py  loop_end_stage.py  loop_start_stage.py
.autoespnet3/stages/: AnalyzeDirStage.md  LoopEndStage.md  LoopStartStage.md
autostages/: __main__.py  cli.py
autostages/resources/: system_prompt.md
autostages/resources/stage_references/: define_dataset_stage.py  define_datasetdict_stage.py  generate_dataset_class_stage.py  generate_dataset_code_stage.py  validate_dataset_class.py  validate_dataset_info_stage.py
autostages/resources/stages/: AnalyzeDirStage.md  LoopEndStage.md  LoopStartStage.md
autostages/src/: analyze_dir.py  utils.py
autostages/src/orchestration/: __init__.py  job_api.py
autostages/src/providers/: claude_provider.py  codex_provider.py  gemini_provider.py  openai_provider.py
autostages/src/stages/: abs_stage.py  analyze_dir_stage.py
